- Set default default bulk_max_size value to 2048 {pull}628[628]

*Packetbeat*
- Fix setting direction to out and use its value to decide when dropping events if ignore_outgoing is enabled {pull}557[557]
- Allow PF_RING sniffer type to be configured using pf_ring or pfring {pull}671[671]
- Create a proper BPF filter when ICMP is the only enabled protocol {issue}757[757]

*Topbeat*

*Filebeat*
- Add exclude_files configuration option {pull}563[563]
- Stop filebeat if filebeat is started without any prospectors defined or empty prospectors {pull}644[644] {pull}647[647]
- Improve shutdown of crawler and prospector to wait for clean completion {pull}720[720]
- Set spool_size default value to 2048 {pull}628[628]

*Winlogbeat*


==== Added

*Affecting all Beats*
- Update builds to Golang version 1.5.3
- Make logstash output compression level configurable. {pull}630[630]
- Add ability to override configuration settings using environment variables {issue}114[114]
- Libbeat now always exits through a single exit method for proper cleanup and control {pull}736[736]

*Packetbeat*
- Add support for capturing DNS over TCP network traffic. {pull}486[486] {pull}554[554]

*Topbeat*
- Group all cpu usage per core statistics and export them optionally if cpu_per_core is configured {pull}496[496]
- Add the command line used to start processes {issue}533[533]

*Filebeat*
- Add multiline support for combining multiple related lines into one event. {issue}461[461]
- Add close_older configuration option to complete ignore_older https://github.com/elastic/filebeat/issues/181[181]

*Winlogbeat*
- Added support for reading event logs using the Windows Event Log API {pull}576[576]
- Modified the event schema to clarify the field meanings. {pull}607[607]


==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-1.0.1]]
=== Beats version 1.0.1