@@ -40,6 +40,7 @@ https://github.com/elastic/beats/compare/1.0.0...master[Check the HEAD diff]
 - Fix setting direction to out and use its value to decide when dropping events if ignore_outgoing is enabled {pull}557[557]
 - Allow PF_RING sniffer type to be configured using pf_ring or pfring {pull}671[671]
 - Create a proper BPF filter when ICMP is the only enabled protocol {issue}757[757]
+- Check column length in pgsql parser. {issue}565{565
 
 *Topbeat*
 
